Final touches before releasing as open source project.